@@ -30,6 +30,7 @@ systemd System and Service Manager
     - remove id SD_MESSAGE_SESSION_STOP;
     - remove id SD_MESSAGE_SLEEP_START;
     - remove id SD_MESSAGE_SLEEP_STOP;
+    - remove id SD_MESSAGE_CONFIG_ERROR;
  * coredump:
     - move coredump sysctl config to separate module journal;
     - move coredump man pages to separate module journal;
